
	* bin/cygport.in (unpack): Accept .tar.bz files.
	(__prep_empty_dirs): Call keepdir() where KEEPDIRS is defined.
	(__list_deps): Sort dependent packages as case-insensitive.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/claws-mail.cygclass: New cygclass for Claws Mail plugins.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/octave.cygclass: New cygclass for Octave extensions.
	* bin/cygport.in (__list_deps, __prepstrip): Treat .oct as DLLs.

	* lib/apache.cygclass (apache_postinst): Adapt to binutils changes.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.11 ***

	* bin/cygport.in (__prepetc): Accept RESTRICT=postinst-gconf.
	(cygautoreconf): Install config.rpath if required.

	* bin/cygport.in: Allow SRC_URI/PATCH_URI to contain CGI arguments.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/ebook.cygclass: New cygclass for EBook documentation.

	* lib/java.cygclass: Use fully-qualified paths for all tools.

	* lib/gnome2.cygclass (gnome2_autoreconf):
	Add support for skipping directories with GNOME2_NO_AUTOGEN.
	Install config.rpath if required.
	Improve automake version detection (requires gnome-common-2.20.0-2).	

	* lib/git.cygclass (git_fetch): Ignore .gitignore.

	* lib/kde3.cygclass: Correct SRC_URI of kdevelop-3.5.2.

	* lib/php.cygclass: Define PHP_PEAR_DIR.
	(php_postinst): Fix .ini naming based on extension, not package name.

	* lib/pygtk.cygclass: Correct naming of nautilus-python.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/ggz.cygclass: New cygclass for GGZ packages.

	* bin/cygport.in (__pkg_binpkg): Allow empty subpackages.

	* lib/ruby.cygclass (ruby_install): Pass arguments to 'rake install'.

	* CYGWIN-PATCHES/README:
	* bin/cygport.in (__src_fetch):
	* lib/Makefile.am:
	* lib/mtn.cygclass: New cygclass for Monotone checkouts.

	* bin/cygport.in (__pkg_diff): Exclude *config.h.in.
	(__pkg_diff): Fix deprecated use of DIFF_EXCLUDES="-x foo".
	(LIBS): default to empty and export.